--- a/src/app/components/first/first.component.html
+++ b/src/app/components/first/first.component.html
@@ -4,7 +4,7 @@
     {{ 'first.title' | translate}}
   </div>
   <div class="para">
-    {{ 'first.introduction' | translate}}
+    &nbsp;&nbsp;&nbsp;&nbsp;{{ 'first.introduction' | translate}}
   </div>
 </div>
 <div class="sp-panel">
@@ -12,39 +12,46 @@
     <div class="container-flex">
       <div class="first-icon icon-example">
       </div>
-      <div class="title-ch-panel">
-        {{ 'example' | translate}}
+      <div style="width:100%;text-align: left;line-height: heightValue;">
+        <div class="title-ch-panel">
+          {{ 'example' | translate}}
+        </div>
       </div>
+      
     </div>
     <hr class="hr-dashed">
     <div class="para-ch-panel">
-      {{ 'first.introductionExample' | translate}}
+      &nbsp;&nbsp;&nbsp;&nbsp;{{ 'first.introductionExample' | translate}}
     </div>
   </div>
   <div class="ch-panel border" (click)="header.goMain()">
     <div class="container-flex">
       <div class="first-icon icon-arrange">
       </div>
-      <div class="title-ch-panel">
-        {{ 'arrange' | translate}}
+      <div style="width:100%;text-align: left;line-height: heightValue;">
+        <div class="title-ch-panel">
+          {{ 'arrange' | translate}}
+        </div>
       </div>
     </div>
     <hr class="hr-dashed">
     <div class="para-ch-panel">
-      {{ 'first.introductionGraph' | translate}}
+      &nbsp;&nbsp;&nbsp;&nbsp;{{ 'first.introductionGraph' | translate}}
     </div>
   </div>
   <div class="ch-panel border" (click)="header.goManagement()">
     <div class="container-flex">
       <div class="first-icon icon-task">
       </div>
-      <div class="title-ch-panel">
-        {{ 'task' | translate}}
+      <div style="width:100%;text-align: left;line-height: heightValue;">
+        <div class="title-ch-panel">
+          {{ 'task' | translate}}
+        </div>
       </div>
     </div>
     <hr class="hr-dashed">
     <div class="para-ch-panel">
-      {{ 'first.introductionTask' | translate}}
+      &nbsp;&nbsp;&nbsp;&nbsp;{{ 'first.introductionTask' | translate}}
     </div>
   </div>
 </div>
