--- a/src/app/components/solution/solution.component.html
+++ b/src/app/components/solution/solution.component.html
@@ -58,6 +58,7 @@
           </div>
           <app-text-editor
             id="text"
+            #text
             [dotSrc]="dotSrc"
             [onTextChange]="handleTextChange"
             [onFocus]="handleTextEditorFocus"
