UI: update first page

--- a/src/app/components/first/first.component.html
+++ b/src/app/components/first/first.component.html
@@ -4,7 +4,7 @@
     {{ 'first.title' | translate}}
   </div>
   <div class="para">
-    &nbsp;&nbsp;&nbsp;&nbsp;{{ 'first.introduction' | translate}}
+    {{ 'first.introduction' | translate}}
   </div>
 </div>
 <div class="sp-panel">
@@ -21,7 +21,7 @@
     </div>
     <hr class="hr-dashed">
     <div class="para-ch-panel">
-      &nbsp;&nbsp;&nbsp;&nbsp;{{ 'first.introductionExample' | translate}}
+      {{ 'first.introductionExample' | translate}}
     </div>
   </div>
   <div class="ch-panel border" (click)="header.goMain()">
@@ -36,7 +36,7 @@
     </div>
     <hr class="hr-dashed">
     <div class="para-ch-panel">
-      &nbsp;&nbsp;&nbsp;&nbsp;{{ 'first.introductionGraph' | translate}}
+      {{ 'first.introductionGraph' | translate}}
     </div>
   </div>
   <div class="ch-panel border" (click)="header.goManagement()">
@@ -51,7 +51,7 @@
     </div>
     <hr class="hr-dashed">
     <div class="para-ch-panel">
-      &nbsp;&nbsp;&nbsp;&nbsp;{{ 'first.introductionTask' | translate}}
+      {{ 'first.introductionTask' | translate}}
     </div>
   </div>
 </div>
