--- a/src/app/components/first/first.component.less
+++ b/src/app/components/first/first.component.less
@@ -21,6 +21,7 @@
     margin   : 0 auto;
     width    : 700px;
     font-size: 16px;
+    text-indent:2em;
   }
 }
 
@@ -110,6 +111,8 @@
 .para-ch-panel {
   margin   : 30px 30px 0 30px;
   font-size: 16px;
+  
+  text-indent:2em;
 }
 
 .border {
