UI: update link

--- a/src/app/components/modal-vscode/modal-vscode.component.html
+++ b/src/app/components/modal-vscode/modal-vscode.component.html
@@ -15,25 +15,24 @@
       <br>
       <strong>提示：</strong>
       <br>
-      1. 用户使用IDE进行开发， UI提供功能单元创建和图编排功能
+      1. 用户使用IDE进行代码开发和调试， UI主要提供功能单元创建和图编排可视化等辅助功能
       <br>
       <br>
-      2. 推荐使用vscode进行代码开发，可以下载
+      2. 推荐使用vscode进行代码开发，具体安装及使用方法可参考
+      <a 
+        style="font-size:16px" 
+        href="https://developer.huaweicloud.com/develop/aigallery/article/detail?id=f5c39a55-0f72-48c5-b8f3-5ec383b5be91" 
+        target="_blank">
+        指导
+      </a>，如果环境准备完毕，可以直接下载
       <a 
         style="font-size:16px; color:#0000EE; cursor:pointer" 
         (click)="download($event)">
         批处理
       </a>
-      文件直接远程启动工程
+      文件远程启动工程
       <br>
       <br>
-      3. 详情可参考
-      <a 
-        style="font-size:16px" 
-        href="https://modelbox-ai.com/modelbox-book/" 
-        target="_blank">
-        指导
-      </a>
     </div>
   </div>
   <div class="modal-footer">
