UI: add download graphviz

--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -178,6 +178,12 @@
             class="tool-bar-button">
             {{'toolBar.graphDescriptionButton' | translate}}
         </button>
+        <button 
+            id="open-graph-setting" 
+            (click)="downloadGraph()" 
+            class="tool-bar-button">
+            {{'toolBar.downloadGraph' | translate}}
+        </button>
     </div>
 </div>
 
