--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -69,7 +69,8 @@
               (saveProjectEmmiter)="saveCurrentProject()"
               (saveSettingEmmiter)="renameGraphSrc($event)"
               (saveGraphEmmiter)="handleSaveAsToBrowser($event)"
-              (removeLabelEmmiter)="removeDotSrcLabel()">
+              (removeLabelEmmiter)="removeDotSrcLabel()"
+              (downloadGraphEmmiter)="downloadGraph()">
             </app-tool-bar>
 
             <div style="flex: 2;" class="graph">
