UI: add min page unittest

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -13,6 +13,7 @@
         <as-split direction="vertical" style="width:100%">
           <as-split-area class="as-split-area-left">
             <app-insert-panels
+              #insertPanel
               [onClick]="handleInsertPanelsClick"
               [onNodeShapeClick]="handleNodeShapeClick"
               [onNodeShapeDragStart]="handleNodeShapeDragStart"
