UI: fix batchsize

--- a/src/app/components/insert-panels/insert-panels.component.less
+++ b/src/app/components/insert-panels/insert-panels.component.less
@@ -60,9 +60,11 @@
 .tips-block {
     display   : grid;
     text-align: left;
-    max-width : 240px;
+    min-width : 250px;
+    max-width : 300px;
     color     : white;
     height    : auto;
+    font-size : 16px;
 }
 
 .icon-refresh {
