UI: fix graphName

--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -206,7 +206,7 @@
                     <div>
                         <input 
                             dTextInput 
-                            name="project_name" 
+                            name="graph_name" 
                             [(ngModel)]="formData.graphName" 
                             maxlength="31"/>
                     </div>
