UI: add port && graph name update

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -68,7 +68,7 @@
               (flowunitEmmiter)="updateDir($event)"
               (projectPathEmmiter)="updateProjectPath($event)"
               (saveProjectEmmiter)="saveCurrentProject()"
-              (saveSettingEmmiter)="renameGraphSrc($event)"
+              (saveSettingEmmiter)="saveSettingOnNewGraph($event)"
               (saveGraphEmmiter)="handleSaveAsToBrowser($event)"
               (removeLabelEmmiter)="removeDotSrcLabel()"
               (downloadGraphEmmiter)="downloadGraph()">
