--- a/src/app/components/modal-vscode/modal-vscode.component.html
+++ b/src/app/components/modal-vscode/modal-vscode.component.html
@@ -4,33 +4,33 @@
   [moveEl]="parent" 
   class="modal-vscode">
   <div class="modal-header" #header>
-    请使用IDE打开代码工程
+    {{ 'message.pleaseUseIDEOpenCodeProject' | translate }}
   </div>
   <div class="modal-body">
     <div>
-      <strong>项目路径：</strong>
+      <strong>{{ 'projectPath' | translate }}</strong>
       <br>
       <strong>{{ data.content }}</strong>
       <br>
       <br>
-      <strong>提示：</strong>
+      <strong>{{ 'notice' | translate }}</strong>
       <br>
-      1. 用户使用IDE进行代码开发和调试， UI主要提供功能单元创建和图编排可视化等辅助功能
+      {{ 'vscode.1' | translate }}
       <br>
       <br>
-      2. 推荐使用vscode进行代码开发，具体安装及使用方法可参考
+      {{ 'vscode.2' | translate }}
       <a 
         style="text-decoration: underline;color:#0000EE; cursor:pointer" 
         href="https://developer.huaweicloud.com/develop/aigallery/article/detail?id=f5c39a55-0f72-48c5-b8f3-5ec383b5be91" 
         target="_blank">
-        指导
-      </a>，如果环境准备完毕，可以直接下载
+        {{ 'guide' | translate }}
+      </a>{{ 'vscode.3' | translate }}
       <a 
         style="text-decoration: underline; color:#0000EE; cursor:pointer" 
         (click)="download($event)">
-        批处理
+        {{ 'bat' | translate }}
       </a>
-      文件远程启动工程
+      {{ 'vscode.4' | translate }}
       <br>
       <br>
     </div>
