UI: add open ide option in dropdown

--- a/src/app/components/tool-bar/tool-bar.component.less
+++ b/src/app/components/tool-bar/tool-bar.component.less
@@ -17,8 +17,12 @@
 
 .project-drop-down {
     display     : inline-block;
-    width       : 70px;
+    width       : 100px;
     margin-right: 4px;
+}
+
+:host ::ng-deep ul .devui-dropdown-item{
+    padding:8px;
 }
 
 .flowunit-drop-down {
