UI: fix bugs of porttype,deviceid, statusgraph,debugpath,devicetype,add ide

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -71,7 +71,8 @@
               (saveSettingEmmiter)="saveSettingOnNewGraph($event)"
               (saveGraphEmmiter)="handleSaveAsToBrowser($event)"
               (removeLabelEmmiter)="removeDotSrcLabel()"
-              (downloadGraphEmmiter)="downloadGraph()">
+              (downloadGraphEmmiter)="downloadGraph()"
+              (projectEmmiter)="updateProject($event)">
             </app-tool-bar>
 
             <div style="flex: 2;" class="graph">
