--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -20,6 +20,7 @@
               [onNodeShapeDragEnd]="handleNodeShapeDragEnd"
               [regFlowUnitPanel]="regFlowUnitPanel"
               [dirs]="dirs"
+              [optionsdevice]="toolBar.optionsdevice"
               (refreshEmmiter)="refreshFlowunit($event)"
               (deviceTypeEmmiter)="updateDeviceType($event)">
             </app-insert-panels>
