UI: fix bug of node && update sign of graph status

--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -134,6 +134,7 @@
     <div class="tool-bar-mid ellipsis project-name">
         {{'toolBar.graph.name' | translate}}
         {{formData.graphName}}
+        <span *ngIf="showStar">*</span>
     </div>
 
     <div class="tool-bar-right">
