UI: fix several bugs

--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -597,7 +597,7 @@
                                     </td>
                                     <td 
                                         dTableCell 
-                                        *ngIf="rowItem.device"
+                                        *ngIf="rowItem.device && formDataCreateFlowunit.lang !== 'inference'"
                                         [editable]="true" 
                                         [editableTip]="editableTipHover"
                                         [(editing)]="rowItem['nameEditDevice']"
